# sentinel

./: .gitignore  Cargo.toml  README.md  cargomake.txt  cargomake2.txt  rustup_update.txt
backend/: Cargo.toml
backend/src/db/: models.rs  schema.rs
frontend/: Cargo.toml  Makefile.toml  README.md
frontend/src/: lib.rs  view_camera.rs
frontend/static/: index.html
migrations/2020-09-22-011037_init/: down.sql  up.sql
migrations/2020-09-29-015955_alter_cols_null_to_not_null/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
watcher/: Cargo.toml
watcher/src/: lib.rs
