[package]
name = "sentinel"
version = "0.1.0"
authors = ["zachdelano <z.delano@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.16.3"
gstreamer-rtsp = "0.16.3"
gstreamer-rtsp-server = "0.16.3"
gstreamer-base = "0.16.3"
# sqlite = "0.25.3"
diesel = { version = "1.4.5", features = ["sqlite"] }