[package]
name = "frontend"
version = "0.1.0"
authors = ["zachdelano <z.delano@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentinel = { path = ".." }
yew = { version = "0.17.4", features = ["services"] }
yewtil = { version = "0.3.2", features = ["future"] }
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
#pulldown-cmark = { version = "0.8", default-features = false }
#serde = { version = "1.0.116", features = ["derive"] }
#reqwest = { version = "0.10.8", features = ["blocking", "json"] }

[dependencies.web-sys]
version = "0.3.45"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[lib]
crate-type = ["cdylib", "rlib"]
